--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.open-in-view=false
 
 # Initialize the JPA Entity Manager before considering data.sql so that the EM can create the schema and data.sql contain data
 spring.jpa.defer-datasource-initialization = true
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
