Eliminacion de Orden_Pedido y nuevas dependencias en el POM

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,21 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Dependencias Nole -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-jose</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-resource-server</artifactId>
+        </dependency>
+
+        
         <!-- Codigo Utiles -->
 
         <!-- PARA EL MODULO DE LOGIN-->
