funcion de autenticacion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ spring.jpa.defer-datasource-initialization = true
 spring.web.resources.static-locations=classpath:/static/,file:src/main/frontend/themes/
 
 setImagenUrl = '';
+jwt.auth.secret=LallaveSuperSecretaQueNadieSabePorqueEsSuperSecreta
