Conexion con Gemini 1.5, asistente NvidiaCorp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.web.resources.static-locations=classpath:/static/,file:src/main/frontend/
 
 setImagenUrl = '';
 jwt.auth.secret=LallaveSuperSecretaQueNadieSabePorqueEsSuperSecreta
+
+# application.properties
+gemini.api.key=AIzaSyDLpvUceCQshf-n6AXd-m4EuknDAfg3Lts
