--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,16 @@ spring.web.resources.static-locations=classpath:/static/,file:src/main/frontend/
 
 setImagenUrl = '';
 jwt.auth.secret=LallaveSuperSecretaQueNadieSabePorqueEsSuperSecreta
+
+# --- CONEXIÓN A MARIADB ---
+spring.datasource.url=jdbc:mariadb://localhost:3306/nvidiacorp_db
+spring.datasource.username=root
+spring.datasource.password=Algoritmos404
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# --- CONFIGURACIÓN JPA (Mágica) ---
+# Esto hace que Spring cree las tablas 'Usuario', 'Persona', etc. automáticamente
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+logging.file.name=registro_completo.log
