--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ jwt.auth.secret=LallaveSuperSecretaQueNadieSabePorqueEsSuperSecreta
 # --- CONEXIÓN A MARIADB ---
 spring.datasource.url=jdbc:mariadb://localhost:3306/nvidiacorp_db
 spring.datasource.username=root
-spring.datasource.password=Algoritmos404
+spring.datasource.password=
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # --- CONFIGURACIÓN JPA (Mágica) ---
