--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ setImagenUrl = '';
 jwt.auth.secret=LallaveSuperSecretaQueNadieSabePorqueEsSuperSecreta
 
 # application.properties
-gemini.api.key=AIzaSyDLpvUceCQshf-n6AXd-m4EuknDAfg3Lts
+gemini.api.key={GEMINI_API_KEY}
