--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,9 @@ spring.web.resources.static-locations=classpath:/static/,file:src/main/frontend/
 setImagenUrl = '';
 jwt.auth.secret=LallaveSuperSecretaQueNadieSabePorqueEsSuperSecreta
 
+# application.properties
+gemini.api.key=${GEMINI_API_KEY}
+
 # --- CONEXIÓN A MARIADB ---
 spring.datasource.url=jdbc:mariadb://localhost:3306/nvidiacorp_db
 spring.datasource.username=root
