--- a/pom.xml
+++ b/pom.xml
@@ -150,13 +150,16 @@
             <artifactId>langchain4j-google-ai-gemini</artifactId>
             <version>0.35.0</version>
         </dependency>
-        <dependencies>
         <dependency>
             <groupId>com.google.genai</groupId>
             <artifactId>google-genai</artifactId>
             <version>1.0.0</version>
         </dependency>
-</dependencies>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
