--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,10 +21,12 @@ jwt.auth.secret=LallaveSuperSecretaQueNadieSabePorqueEsSuperSecreta
 gemini.api.key=${GEMINI_API_KEY}
 
 # --- CONEXIÓN A MARIADB ---
-spring.datasource.url=jdbc:mariadb://localhost:3306/nvidiacorp_db
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mysql://gateway01.us-east-1.prod.aws.tidbcloud.com:4000/test?sslMode=VERIFY_IDENTITY
+spring.datasource.username=kZ7JtMzvc9KdhAJ.root
+spring.datasource.password=39PlHYoeolvdehKw
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
 
 # --- CONFIGURACIÓN JPA (Mágica) ---
 # Esto hace que Spring cree las tablas 'Usuario', 'Persona', etc. automáticamente
